# Sonarpad-Minimal

./: Cargo.toml  README.md  donations_en.txt  donations_it.txt
.github/workflows/: crea-release-macos.yml  macos-app-dmg.yml  test-podcast-macos.yml
i18n/: feed_en.txt  feed_it.txt  ui_en.json  ui_it.json
src/: articles.rs  curl_client.rs  edge_tts.rs  file_loader.rs  main.rs  podcast_player.rs  podcasts.rs  reader.rs
