[package]
name = "sonarpad-minimal"
version = "0.1.0"
edition = "2024"

[dependencies]
wxdragon = "0.9.9"
tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.19", features = ["v4"] }
chrono = { version = "0.4", features = ["clock", "std"] }
futures-util = "0.3"
anyhow = "1.0"
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
url = "2.5"
rodio = "0.20"
docx-rs = "0.4"
pdf-extract = "0.10"
pdfium-render = { version = "0.8.37", default-features = false, features = ["pdfium_latest", "thread_safe"] }
epub = "2.1"
calamine = "0.32"
encoding_rs = "0.8"
cfb = "0.10"
html2text = "0.13"
feed-rs = "2.3"
scraper = "0.23"
curl = "0.4"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-foundation = { version = "0.3.2", features = ["NSString", "NSURL"] }
objc2-av-foundation = { version = "0.3.2", features = ["AVPlayer", "AVPlayerItem", "objc2-core-media"] }
objc2-core-media = "0.3.2"
